# ragshield

./: Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  SOURCES.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
demos/: corpus-scan.json
demos/01-basic/: SCENARIO.md  corpus.jsonl
demos/01-corp-knowledge-base/: SCENARIO.md  corpus-scan.json
demos/02-clean-corpus/: SCENARIO.md  corpus-scan.json
demos/03-research-papers-mixed/: SCENARIO.md  corpus-scan.json
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
integrations/: webhook.py
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
ragshield/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
tests/: test_connect.py  test_hardening.py  test_smoke.py
